--- a/KYVedioPlayer/Podfile
+++ b/KYVedioPlayer/Podfile
@@ -2,5 +2,5 @@ platform:ios,'7.0'
 target "KYVedioPlayer" do
 pod 'Masonry', '~> 1.0.1'
 pod 'MJRefresh', '~> 3.1.12'
-
+pod 'SDWebImage', '~> 3.8.2'
 end
