--- a/KYVedioPlayer/Podfile
+++ b/KYVedioPlayer/Podfile
@@ -3,4 +3,6 @@ target "KYVedioPlayer" do
 pod 'Masonry', '~> 1.0.1'
 pod 'MJRefresh', '~> 3.1.12'
 pod 'SDWebImage', '~> 3.8.2'
+pod 'MBProgressHUD', '~> 1.0.0'
+
 end
