--- a/KYVedioPlayer/Podfile
+++ b/KYVedioPlayer/Podfile
@@ -1,4 +1,7 @@
-platform:ios,'7.0'
+source 'https://github.com/CocoaPods/Specs.git'
+platform :ios, '7.0'
+use_frameworks!
+
 target "KYVedioPlayer" do
 pod 'Masonry', '~> 1.0.1'
 pod 'MJRefresh', '~> 3.1.12'
